--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('profissao.index') }}">Profissões</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('capacitacao.index') }}">Capacitações</a>
+                        </li>
                     {% endif %}
                 </ul>
 
